--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "firebase": "^10.11.1",
+    "moment": "^2.30.1",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
     "vuefire": "^3.1.23"
