--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "moment": "^2.30.1",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0",
-    "vuefire": "^3.1.23"
+    "vuefire": "^3.1.23",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
