--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "host": "vite --host"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^5.1.1",
     "firebase": "^10.11.1",
     "moment": "^2.30.1",
     "vue": "^3.4.21",
